Add troubleshooting section to README.md and create detailed TROUBLESHOOTING.md guide
- Added troubleshooting steps for "Failed to determine user credentials" error in README.md.
- Created TROUBLESHOOTING.md with common issues, solutions, and commands for service management.
- Introduced fix_service_user.sh script to automate user configuration for the lora-osmnotes service.
- Updated install_pi.sh to dynamically set the service user based on system configuration.

--- a/systemd/lora-osmnotes.service
+++ b/systemd/lora-osmnotes.service
@@ -5,7 +5,8 @@ Wants=network-online.target
 
 [Service]
 Type=simple
-User=pi
+# User will be set by install script (pi, ubuntu, or current user)
+# User=pi
 Group=dialout
 WorkingDirectory=/var/lib/lora-osmnotes
 Environment="PATH=/opt/lora-osmnotes/bin"
