Add SECURITY.md for service user configuration and security best practices
- Introduced SECURITY.md to outline critical security considerations for the lora-osmnotes service.
- Emphasized the importance of running the service as a non-privileged user and provided guidelines for user configuration.
- Included instructions for verifying and fixing service user settings, as well as managing file permissions and network security.
- Updated lora-osmnotes.service to clarify user configuration requirements and warnings against running as root.
- Enhanced fix_service_user.sh script to handle user line updates more robustly.

--- a/systemd/lora-osmnotes.service
+++ b/systemd/lora-osmnotes.service
@@ -5,8 +5,11 @@ Wants=network-online.target
 
 [Service]
 Type=simple
-# User will be set by install script (pi, ubuntu, or current user)
-# User=pi
+# SECURITY: User must be set to a non-root user
+# The install script (scripts/install_pi.sh) will automatically detect and set the correct user
+# If installing manually, replace 'nobody' with your username (e.g., User=pi or User=ubuntu)
+# WARNING: Do not run as root! Change this to a non-privileged user.
+User=nobody
 Group=dialout
 WorkingDirectory=/var/lib/lora-osmnotes
 Environment="PATH=/opt/lora-osmnotes/bin"
