Enhance CONTRIBUTING.md and pyproject.toml for improved development setup and linting guidelines
- Updated CONTRIBUTING.md to clarify installation instructions, emphasizing the use of pyproject.toml as the primary source for dependencies.
- Added detailed sections on code formatting with Black and linting with Ruff, including recommended workflows and editor integration.
- Updated pyproject.toml to include Black and Ruff as development dependencies, along with their configurations for code style and linting rules.
- Revised requirements.txt to indicate its role for backward compatibility and highlight pyproject.toml as the source of truth for dependencies.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+# Requirements file for backward compatibility
+# NOTE: pyproject.toml is the source of truth for dependencies
+# This file is auto-generated from pyproject.toml for environments that don't support PEP 621
+# To install: pip install -r requirements.txt
+# Recommended: pip install -e ".[dev]" (uses pyproject.toml)
+
 pyserial>=3.5
 protobuf>=4.25.0
 requests>=2.31.0
