--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,8 @@ extend-exclude = '''
 [tool.ruff]
 line-length = 100
 target-version = "py38"
+
+[tool.ruff.lint]
 select = [
     "E",   # pycodestyle errors
     "W",   # pycodestyle warnings
@@ -67,9 +69,9 @@ ignore = [
     "C901",  # too complex
 ]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]  # unused imports allowed in __init__.py
 "tests/*" = ["E501"]  # allow long lines in tests
 
-[tool.ruff.isort]
+[tool.ruff.lint.isort]
 known-first-party = ["gateway"]
