--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dev = [
     "pytest-cov>=4.1.0",
     "black>=23.0.0",
     "ruff>=0.1.0",
+    "pre-commit>=3.5.0",
+    "bandit>=1.7.6",
 ]
 
 [tool.pytest.ini_options]
